--- a/src/app/checkin-list/checkin-list.component.html
+++ b/src/app/checkin-list/checkin-list.component.html
@@ -1,3 +1,37 @@
-<p>
-  checkin-list works!
-</p>
+<img class="banner" src="assets/images/admin-top.png" />
+<div id="dashboard_body">
+  
+    <div class="title">
+      UX Meetup签到表
+    </div>
+    
+
+
+
+
+  <table class="data_table">
+    <tr>
+      <th class="data_table_name" >序号</th>
+      <th class="data_table_form_id" >姓名</th>
+      <th>
+          手机号
+      </th>
+    </tr>
+    <tr>
+      <td class="data_table_name" >5</td>
+      <td class="data_table_form_id" >Xuemin</td>
+      <td>
+          13000001111
+      </td>
+    </tr>
+    <tr>
+      <td class="data_table_name" >4</td>
+      <td class="data_table_form_id" >Zhu Ye</td>
+      <td>
+          13000005555
+      </td>
+    </tr>
+  </table>
+
+  <p>金数据链接：DG4M6D</p>
+</div>
