--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<img class="banner" src="assets/images/admin-main.png" />
+<div class="title">
+  <img src="assets/images/E-check.png" />
+</div>
+<div style="text-align:center">
+  <div class="input">
+    <label>用户名</label>
+    <input type="text">
+  </div>
+  <div class="input">
+    <label>密码</label>
+    <input type="text">
+  </div>
+  <button (click)="login()">登录</button>
+</div>
