--- a/src/app/qrcode/qrcode.component.html
+++ b/src/app/qrcode/qrcode.component.html
@@ -1,4 +1,4 @@
 <img class="banner" src="assets/images/admin-top.png" />
-<div>
+<div id="qrcode_body">
   <canvas id="qrcode_panel"></canvas>
 </div>
