--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,9 @@
 
   <table class="data_table">
     <tr *ngFor="let activity of activities">
-      <td class="data_table_name">{{activity.name}}</td>
+      <td class="data_table_name">
+        <span (click)="gotoCheckinList(activity.name, activity.form_id)">{{activity.name}}</span>
+        </td>
       <td class="data_table_form_id">{{activity.form_id}}</td>
       <td>
         <button (click)="showQrcode(activity.form_id)">查看二维码</button>
