--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="input">
     <label>密码</label>
-    <input #password type="text">
+    <input #password type="password">
   </div>
   <button (click)="login(email.value, password.value)">登录</button>
 </div>
