--- a/src/app/checkin-list/checkin-list.component.css
+++ b/src/app/checkin-list/checkin-list.component.css
@@ -4,6 +4,9 @@
     font-family: "opensans";
     font-size: 18px;
 }
+.banner{
+    width: 100%;
+}
 .title {
     font-size: 28px;
     text-align: center;
